--- a/about.html
+++ b/about.html
@@ -29,11 +29,12 @@
   <meta property="twitter:image" content="https://blessedsam-electrical.com/images/electrician.jpeg" />
   
   <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2c5aa0">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
+  <link rel="icon" type="image/x-icon" href="images/favicon_io/favicon.ico">
+  <link rel="manifest" href="images/favicon_io/site.webmanifest">
+  <link rel="mask-icon" href="images/favicon_io/safari-pinned-tab.svg" color="#2c5aa0">
   <meta name="msapplication-TileColor" content="#2c5aa0">
   <meta name="theme-color" content="#2c5aa0">
   
@@ -118,7 +119,10 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><i class="fas fa-bolt me-2"></i>BLESSEDSAM ELECTRICAL</a>
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+        <img src="images/logo.png" alt="BlessedSam Electrical Logo" class="navbar-logo me-2">
+        <span>BLESSEDSAM ELECTRICAL</span>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
