--- a/contact.html
+++ b/contact.html
@@ -127,10 +127,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="index.html">
-        <img src="images/logo.png" alt="BlessedSam Electrical Logo" class="navbar-logo me-2">
-        <span>BLESSEDSAM ELECTRICAL</span>
-      </a>
+      <a class="navbar-brand" href="index.html"><i class="fas fa-bolt me-2"></i>BLESSEDSAM</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -162,58 +159,9 @@
       </div>
       <div class="row">
         <div class="col-lg-6 mb-4">
-          <h4>Send a Message</h4>
-          <form id="contactForm" novalidate>
-            <div class="mb-3">
-              <label for="name" class="form-label">Full Name</label>
-              <input type="text" class="form-control" id="name" name="name" placeholder="Your name" required>
-              <div class="invalid-feedback">
-                Please provide a valid name.
-              </div>
-            </div>
-            <div class="mb-3">
-              <label for="email" class="form-label">Email Address</label>
-              <input type="email" class="form-control" id="email" name="email" placeholder="you@example.com" required>
-              <div class="invalid-feedback">
-                Please provide a valid email address.
-              </div>
-            </div>
-            <div class="mb-3">
-              <label for="phone" class="form-label">Phone Number (Optional)</label>
-              <input type="tel" class="form-control" id="phone" name="phone" placeholder="+254 700 123 456">
-            </div>
-            <div class="mb-3">
-              <label for="subject" class="form-label">Subject</label>
-              <select class="form-select" id="subject" name="subject" required>
-                <option value="">Choose a subject...</option>
-                <option value="general">General Inquiry</option>
-                <option value="installation">Installation Services</option>
-                <option value="maintenance">Maintenance & Repair</option>
-                <option value="emergency">Emergency Service</option>
-                <option value="quote">Request Quote</option>
-              </select>
-              <div class="invalid-feedback">
-                Please select a subject.
-              </div>
-            </div>
-            <div class="mb-3">
-              <label for="message" class="form-label">Your Message</label>
-              <textarea class="form-control" id="message" name="message" rows="5" placeholder="Write your message here..." required></textarea>
-              <div class="invalid-feedback">
-                Please provide a message.
-              </div>
-            </div>
-            <button type="submit" class="btn btn-primary-custom" id="submitBtn">
-              <i class="fas fa-paper-plane me-2"></i>Send Message
-            </button>
-          </form>
-          
-          <!-- Success/Error Messages -->
-          <div id="formMessage" class="mt-3" style="display: none;">
-            <div class="alert" role="alert">
-              <span id="messageText"></span>
-            </div>
-          </div>
+          <h4>Contact Us Directly</h4>
+<p class="mb-3">For all inquiries, please use the contact details or click the button below to email us directly via Gmail.</p>
+<a href="https://mail.google.com/mail/?view=cm&fs=1&to=your@email.com" target="_blank" class="btn btn-primary-custom"><i class="fas fa-envelope me-2"></i>Email Us on Gmail</a>
         </div>
         <div class="col-lg-6 mb-4">
           <h4>Contact Information</h4>
