--- a/portfolio.html
+++ b/portfolio.html
@@ -118,10 +118,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="index.html">
-        <img src="images/logo.png" alt="BlessedSam Electrical Logo" class="navbar-logo me-2">
-        <span>BLESSEDSAM ELECTRICAL</span>
-      </a>
+      <a class="navbar-brand" href="index.html"><i class="fas fa-bolt me-2"></i>BLESSEDSAM</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
